--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,8 @@
 APP_ENV=local
-APP_HOST=0.0.0.0
-APP_PORT=80
+APP_HOST=localhost
+APP_PORT=8080
+
+WEBSITE_URL=localhost
 
 DB_SCHEME=postgresql
 DB_HOST=localhost
@@ -17,3 +19,6 @@ REDIS_PORT=6379
 REDIS_DB=0
 
 PORT=10000
+
+FRONTEND_ADDRESS=http://localhost:3000
+BACKEND_ADDRESS=http://localhost:10000
