--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+**/__pycache__/
+.env-prod
 .env
-TODO.md
-PLAN.md
 ./__pycache__
 nginx.conf
-.env-prod
+venv
+TODO.md
+PLAN.md
+text_files
+my-config.sh
+**/certs
+.venv
